--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <title>Felipe Machado</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/componets/main-header.css">
+    <link rel="stylesheet" href="css/componets/main-menu.css">
+    <link rel="stylesheet" href="css/componets/main-btn.css">
 </head>
 
 <body>
-    <header>
-        <h1>Felipe Machado</h1>
-        <nav>
-            <a href="#">About Me</a>
-            <a href="#">Portfolio</a>
-            <a id="btn" href="#">Download CV</a>
+    <header class="main-header">
+        <h1 class="logo">Felipe Machado</h1>
+        <nav class="main-item">
+            <a class="item" href="#">About Me</a>
+            <a class="item" href="#">Portfolio</a>
+            <a class="main-btn" href="#">Download CV</a>
         </nav>
     </header>
 </body>
