class=main-menu corrigida

--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
     <link rel="stylesheet" href="css/componets/main-header.css">
     <link rel="stylesheet" href="css/componets/main-menu.css">
     <link rel="stylesheet" href="css/componets/main-btn.css">
+    <link rel="stylesheet" href="css/componets/play-video.css">
+
 </head>
 
 <body>
     <header class="main-header">
         <h1 class="logo">Felipe Machado</h1>
-        <nav class="main-item">
-            <a class="item" href="#">About Me</a>
+        <nav class="main-menu">
+            <a class="item" href="#">Sobre</a>
             <a class="item" href="#">Portfolio</a>
-            <a class="main-btn" href="#">Download CV</a>
+            <button class="main-btn" href="#">Download CV</button>
         </nav>
     </header>
+    <a class="play-video" href="#">Começar o Vídeo</a>
 </body>
 </html>
