Renomeado os stylesheet

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/componets/main-header.css">
-    <link rel="stylesheet" href="css/componets/main-menu.css">
-    <link rel="stylesheet" href="css/componets/main-btn.css">
-    <link rel="stylesheet" href="css/componets/play-video.css">
+    <link rel="stylesheet" href="css/components/main-header.css">
+    <link rel="stylesheet" href="css/components/main-menu.css">
+    <link rel="stylesheet" href="css/components/main-btn.css">
+    <link rel="stylesheet" href="css/components/play-video.css">
 
 </head>
 
