acrescentamos a barra de redes sociais

--- a/index.html
+++ b/index.html
@@ -12,18 +12,33 @@
     <link rel="stylesheet" href="css/components/main-menu.css">
     <link rel="stylesheet" href="css/components/main-btn.css">
     <link rel="stylesheet" href="css/components/play-video.css">
-
+    <link rel="stylesheet" href="css/components/title-rotate.css">
+    <link rel="stylesheet" href="css/components/social-media.css">
 </head>
 
 <body>
     <header class="main-header">
         <h1 class="logo">Felipe Machado</h1>
         <nav class="main-menu">
-            <a class="item" href="#">Sobre</a>
+            <a class="item" href="#">About Me</a>
             <a class="item" href="#">Portfolio</a>
             <button class="main-btn" href="#">Download CV</button>
         </nav>
     </header>
     <a class="play-video" href="#">Começar o Vídeo</a>
+    <section>
+        <h1 class="title-rotate">Follow Me</h1>
+        <ul class="social-media">
+            <li class="item">
+                <a class="action -facebook" target="_blank" href="https://www.facebook.com/Feelipe.PM">Facebook</a>
+            </li>
+            <li class="item">
+                <a class="action -twitter" target="_blank" href="http://twitter.com/FeelipePM">Twitter</a>
+            </li>
+            <li class="item">
+                <a class="action -linkedin" target="_blank" href="http://linkedin.com/FeelipePM">Linkedin</a>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
