Adicionado titulo, subtitulo e o avatar

--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
+
+    <link rel="stylesheet" href="css/objects/wrap-featured.css">
+    <link rel="stylesheet" href="css/objects/wrap-social.css">
+    <link rel="stylesheet" href="css/objects/title-featured.css">
+    <link rel="stylesheet" href="css/objects/subtitle-featured.css">
+
     <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-menu.css">
+    <link rel="stylesheet" href="css/components/avatar-profile.css">
     <link rel="stylesheet" href="css/components/main-btn.css">
     <link rel="stylesheet" href="css/components/play-video.css">
     <link rel="stylesheet" href="css/components/title-rotate.css">
@@ -25,20 +32,32 @@
             <button class="main-btn" href="#">Download CV</button>
         </nav>
     </header>
-    <a class="play-video" href="#">Começar o Vídeo</a>
-    <section>
-        <h1 class="title-rotate">Follow Me</h1>
-        <ul class="social-media">
-            <li class="item">
-                <a class="action -facebook" target="_blank" href="https://www.facebook.com/Feelipe.PM">Facebook</a>
-            </li>
-            <li class="item">
-                <a class="action -twitter" target="_blank" href="http://twitter.com/FeelipePM">Twitter</a>
-            </li>
-            <li class="item">
-                <a class="action -linkedin" target="_blank" href="http://linkedin.com/FeelipePM">Linkedin</a>
-            </li>
-        </ul>
+    <section class="wrap-featured">
+        <figure class="avatar-profile">
+            <img class="photo" src="img/barba.jpg" alt="Foto Homem com Barba">
+        </figure>
+
+        <h1 class="title-featured"> My <strong class="featured">Works</strong>
+        </h1>
+        <h2 class="subtitle-featured">FrontEnd Developer</h2>
+
+        <a class="play-video" href="#">Começar o Vídeo</a>
+
+        <aside class="wrap-social">
+            <h1 class="title-rotate">Follow Me</h1>
+
+            <ul class="social-media">
+                <li class="item">
+                    <a class="action -facebook" target="_blank" href="https://www.facebook.com/Feelipe.PM">Facebook</a>
+                </li>
+                <li class="item">
+                    <a class="action -twitter" target="_blank" href="http://twitter.com/FeelipePM">Twitter</a>
+                </li>
+                <li class="item">
+                    <a class="action -linkedin" target="_blank" href="http://linkedin.com/FeelipePM">Linkedin</a>
+                </li>
+            </ul>
+        </aside>
     </section>
 </body>
 </html>
