Nova seção para os cards

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="css/objects/wrap-featured.css">
     <link rel="stylesheet" href="css/objects/wrap-social.css">
+    <link rel="stylesheet" href="css/objects/wrap-channel.css">
     <link rel="stylesheet" href="css/objects/title-featured.css">
     <link rel="stylesheet" href="css/objects/subtitle-featured.css">
 
@@ -21,6 +22,7 @@
     <link rel="stylesheet" href="css/components/play-video.css">
     <link rel="stylesheet" href="css/components/title-rotate.css">
     <link rel="stylesheet" href="css/components/social-media.css">
+    <link rel="stylesheet" href="css/components/card-channel.css">
 </head>
 
 <body>
@@ -58,6 +60,38 @@
                 </li>
             </ul>
         </aside>
+    </section>
+    <section class="wrap-channel">
+        <dl class="card-channel">
+            <dd class="logo">
+                <img src="img/stopwatch.png" alt="Relógio">
+            </dd>
+            <dt class="title">On Time</dt>
+            <dd class="description">All i want to have client setisfaction & this is my aim</dd>
+            <dd class="main-btn -card btn">
+                <a href="#">Learn More</a>
+            </dd>
+        </dl>
+        <dl class="card-channel">
+            <dd class="logo">
+                <img src="img/safe-box.png" alt="Relógio">
+            </dd>
+            <dt class="title">Clean Work</dt>
+            <dd class="description">All i want to have client setisfaction & this is my aim</dd>
+            <dd class="main-btn -card btn">
+                <a href="#">Learn More</a>
+            </dd>
+        </dl>
+        <dl class="card-channel">
+            <dd class="logo">
+                <img src="img/icon.png" alt="Relógio">
+            </dd>
+            <dt class="title">Client Satisfaction</dt>
+            <dd class="description">All i want to have client setisfaction & this is my aim</dd>
+            <dd class="main-btn -card btn">
+                <a href="#">Learn More</a>
+            </dd>
+        </dl>
     </section>
 </body>
 </html>
