Texto My Work aumentado

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <img class="photo" src="img/barba.jpg" alt="Foto Homem com Barba">
         </figure>
 
-        <h1 class="title-featured"> My <strong class="featured">Works</strong>
+        <h1 class="title-featured"> My <strong class="featured">Work</strong>
         </h1>
-        <h2 class="subtitle-featured">FrontEnd Developer</h2>
+        <h2 class="subtitle-featured">Front-End Developer</h2>
 
         <a class="play-video" href="#">Começar o Vídeo</a>
 
