criado a parte do portfolio

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <link rel="stylesheet" href="css/objects/wrap-channel.css">
     <link rel="stylesheet" href="css/objects/title-featured.css">
     <link rel="stylesheet" href="css/objects/subtitle-featured.css">
+    <link rel="stylesheet" href="css/objects/main-title.css">
+    <link rel="stylesheet" href="css/objects/main-subtitle.css">
+    <link rel="stylesheet" href="css/objects/wrap-portfolio.css">
+    <link rel="stylesheet" href="css/objects/main-figure.css">
 
     <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-menu.css">
+    <link rel="stylesheet" href="css/components/main-card.css">
     <link rel="stylesheet" href="css/components/avatar-profile.css">
     <link rel="stylesheet" href="css/components/main-btn.css">
     <link rel="stylesheet" href="css/components/play-video.css">
@@ -92,6 +97,27 @@
                 <a href="#">Learn More</a>
             </dd>
         </dl>
+    </section>
+
+    <section class="wrap-portfolio">
+        <h1 class="main-title">My Portfolio</h1>
+        <h2 class="main-subtitle">Front-End Developer</h2>
+
+        <img class="main-figure" src="img/first.jpg" alt="Exemplo">
+        <img class="main-figure" src="img/second.jpg" alt="Exemplo">
+        <img class="main-figure" src="img/third.jpg" alt="Exemplo">
+
+        <article class="main-card">
+            <div class="content">
+                <h1 class="title">Portfolio</h1>
+                    <p class="description">Writing paragraphs takes practice, but what should students write 
+                        about? Good paragraph writing prompts allow students to write 
+                        about what they know and like, so their focus can be on the writing 
+                        process and using the four essential elements.</p>
+            </div>
+        </article>
+
+        <img class="main-figure" src="img/fourth.jpg" alt="Exemplo">
     </section>
 </body>
 </html>
