Acrescentado as novas imagens ao portfolio

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         </article>
 
         <img class="main-figure" src="img/fourth.jpg" alt="Exemplo">
+        <img class="main-figure" src="img/fifth.jpg" alt="Exemplo">
+        <img class="main-figure" src="img/sixth.jpg" alt="Exemplo">
+        <img class="main-figure" src="img/seventh.jpg" alt="Exemplo">
     </section>
 </body>
 </html>
