--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/components/title-rotate.css">
     <link rel="stylesheet" href="css/components/social-media.css">
     <link rel="stylesheet" href="css/components/card-channel.css">
+    <link rel="stylesheet" href="css/components/main-expand.css">
 </head>
 
 <body>
@@ -115,12 +116,23 @@
                         about what they know and like, so their focus can be on the writing 
                         process and using the four essential elements.</p>
             </div>
+
+            <figure class="main-expand">
+                <figcaption class="subtitle">Full Screen</figcaption>
+                <img class="picture" src="img/expand.svg" alt="Icone para ampliar a imagem">
+            </figure>
+
         </article>
 
-        <img class="main-figure" src="img/fourth.jpg" alt="Exemplo">
-        <img class="main-figure" src="img/fifth.jpg" alt="Exemplo">
-        <img class="main-figure" src="img/sixth.jpg" alt="Exemplo">
-        <img class="main-figure" src="img/seventh.jpg" alt="Exemplo">
+            <img class="main-figure" src="img/fourth.jpg" alt="Exemplo">
+        <div>
+            <img class="main-figure" src="img/fifth.jpg" alt="Exemplo">
+            <img class="main-figure" src="img/sixth.jpg" alt="Exemplo">
+            <img class="main-figure" src="img/seventh.jpg" alt="Exemplo">
+        </div>
+
     </section>
+
+    <script src="js/component/main-expand.js"></script>
 </body>
 </html>
