Começando a criar o carrousel

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="css/components/social-media.css">
     <link rel="stylesheet" href="css/components/card-channel.css">
     <link rel="stylesheet" href="css/components/main-expand.css">
+    <link rel="stylesheet" href="css/components/main-carrousel.css">
 </head>
 
 <body>
@@ -131,6 +132,25 @@
             <img class="main-figure" src="img/seventh.jpg" alt="Exemplo">
         </div>
 
+    </section>
+
+    <section>
+        <h1 class="main-title">Testimonial</h1>
+        <h2 class="main-subtitle">See People say Aboute ME</h2>
+
+        <div class="main-carrousel">
+            <ol class="cards">
+                <li class="card"></li>
+                <li class="card"></li>
+                <li class="card"></li>
+            </ol>
+
+            <ol class="bullets">
+                <li class="bullet"><a href="">Primeiro</li>
+                <li class="bullet -isActive"><a href="">Segundo</li>
+                <li class="bullet"><a href="">Terceiro</li>
+            </ol>
+        </div>
     </section>
 
     <script src="js/component/main-expand.js"></script>
