adicionado um -isActive no card na class card e bullet

--- a/index.html
+++ b/index.html
@@ -140,19 +140,20 @@
 
         <div class="main-carrousel">
             <ol class="cards">
-                <li class="card"></li>
-                <li class="card"></li>
-                <li class="card"></li>
+                <li id="first" class="card"></li>
+                <li id="second" class="card -isActive"></li>
+                <li id="third" class="card"></li>
             </ol>
 
             <ol class="bullets">
-                <li class="bullet"><a href="">Primeiro</li>
-                <li class="bullet -isActive"><a href="">Segundo</li>
-                <li class="bullet"><a href="">Terceiro</li>
+                <li class="bullet"><a href="#first">Primeiro</li>
+                <li class="bullet -isActive"><a href="#second">Segundo</li>
+                <li class="bullet"><a href="#third">Terceiro</li>
             </ol>
         </div>
     </section>
 
     <script src="js/component/main-expand.js"></script>
+    <script src="js/component/main-carrousel.js"></script>
 </body>
 </html>
