--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
 
         <div class="main-carrousel">
             <ol class="cards">
-                <li id="first" class="card"></li>
-                <li id="second" class="card -isActive"></li>
-                <li id="third" class="card"></li>
+                <li id="first" class="card -left">1</li>
+                <li id="second" class="card -isActive">2</li>
+                <li id="third" class="card -right">3</li>
             </ol>
 
             <ol class="bullets">
-                <li class="bullet"><a href="#first">Primeiro</li>
-                <li class="bullet -isActive"><a href="#second">Segundo</li>
-                <li class="bullet"><a href="#third">Terceiro</li>
+                <li class="bullet"><a href="#first">Primeiro</a></li>
+                <li class="bullet -isActive"><a href="#second">Segundo</a></li>
+                <li class="bullet"><a href="#third">Terceiro</a></li>
             </ol>
         </div>
     </section>
