--- a/index.html
+++ b/index.html
@@ -136,13 +136,51 @@
 
     <section>
         <h1 class="main-title">Testimonial</h1>
-        <h2 class="main-subtitle">See People say Aboute ME</h2>
+        <h2 class="main-subtitle">See People say About Me</h2>
 
         <div class="main-carrousel">
             <ol class="cards">
-                <li id="first" class="card -left">1</li>
-                <li id="second" class="card -isActive">2</li>
-                <li id="third" class="card -right">3</li>
+                <li id="first" class="card -left">
+                <figure>
+                        <div class="wrapPicture">
+                            <img class="picture" src="img/Men-Hairstyle.png" alt="Foto de um Homem">
+                        </div>
+                        <figcaption class="name">Felipe Machado, SC</figcaption>
+                </figure>
+                <p class="testimony">
+                        Writing paragraphs takes practice, but what should students write about? Good paragraph writing prompts allow students to
+                        write about what they know and like, so their focus can be on the writing process and using the four
+                        essential elements.
+                </p>
+                </li>
+
+                <li id="second" class="card -isActive">
+                <figure>
+                        <div class="wrapPicture">
+                            <img class="picture" src="img/Men-Hairstyle.png" alt="Foto de um Homem">
+                        </div>
+                        <figcaption class="name">Felipe Machado, SC</figcaption>
+                </figure>
+                <p class="testimony">
+                        Writing paragraphs takes practice, but what should students write about? Good paragraph writing prompts allow students to
+                        write about what they know and like, so their focus can be on the writing process and using the four
+                        essential elements.
+                </p>
+                </li>
+
+                <li id="third" class="card -right">
+                <figure>
+                        <div class="wrapPicture">
+                            <img class="picture" src="img/Men-Hairstyle.png" alt="Foto de um Homem">
+                        </div>
+                        <figcaption class="name">Felipe Machado, SC</figcaption>
+                </figure>   
+                <p class="testimony">
+                        Writing paragraphs takes practice, but what should students write about? Good paragraph writing prompts allow students to
+                        write about what they know and like, so their focus can be on the writing process and using the four
+                        essential elements.
+                </p>
+                </li>
             </ol>
 
             <ol class="bullets">
