Criado o campo para entrar em contato

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="css/components/card-channel.css">
     <link rel="stylesheet" href="css/components/main-expand.css">
     <link rel="stylesheet" href="css/components/main-carrousel.css">
+    <link rel="stylesheet" href="css/components/main-form.css">
 </head>
 
 <body>
@@ -191,7 +192,18 @@
         </div>
     </section>
 
+    <section>
+        <h1 class="main-title">Want To Hire Me?</h1>
+        <h2 class="main-subtitle">If You Like My Work</h2>
+
+        <form action="" class="main-form">
+            <input type="email" class="input" placeholder="enter your email">
+            <input type="submit" value="Hire Me" class="main-btn -card btn">
+        </form>
+    </section>
+
     <script src="js/component/main-expand.js"></script>
     <script src="js/component/main-carrousel.js"></script>
+    <script src="js/component/main-form.js"></script>
 </body>
 </html>
