Começando a criar o footer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/objects/main-subtitle.css">
     <link rel="stylesheet" href="css/objects/wrap-portfolio.css">
     <link rel="stylesheet" href="css/objects/main-figure.css">
+    <link rel="stylesheet" href="css/objects/main-msg.css">
 
     <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-menu.css">
@@ -201,6 +202,22 @@
             <input type="submit" value="Hire Me" class="main-btn -card btn">
         </form>
     </section>
+
+    <footer class="main-footer">
+        <h1 class="main-logo"></h1>
+
+        <nav class="navigation">
+            <li class="item">
+                <a href="" class="action">Facebook</a>
+            </li>
+            <li class="item">
+                <a href="" class="action">Twitter</a>
+            </li>
+            <li class="item">
+                <a href="" class="action">Linkedn</a>
+            </li>
+        </nav>
+    </footer>
 
     <script src="js/component/main-expand.js"></script>
     <script src="js/component/main-carrousel.js"></script>
