--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Felipe Machado</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/settings.css">
+
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
 
@@ -19,6 +22,7 @@
     <link rel="stylesheet" href="css/objects/wrap-portfolio.css">
     <link rel="stylesheet" href="css/objects/main-figure.css">
     <link rel="stylesheet" href="css/objects/main-msg.css">
+    <link rel="stylesheet" href="css/objects/main-logo.css">
 
     <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-menu.css">
@@ -32,11 +36,12 @@
     <link rel="stylesheet" href="css/components/main-expand.css">
     <link rel="stylesheet" href="css/components/main-carrousel.css">
     <link rel="stylesheet" href="css/components/main-form.css">
+    <link rel="stylesheet" href="css/components/main-footer.css">
 </head>
 
 <body>
     <header class="main-header">
-        <h1 class="logo">Felipe Machado</h1>
+        <h1 class="main-logo">Felipe Machado</h1>
         <nav class="main-menu">
             <a class="item" href="#">About Me</a>
             <a class="item" href="#">Portfolio</a>
@@ -204,19 +209,25 @@
     </section>
 
     <footer class="main-footer">
-        <h1 class="main-logo"></h1>
+        <h1 class="main-logo">Felipe Machado</h1>
 
         <nav class="navigation">
-            <li class="item">
-                <a href="" class="action">Facebook</a>
-            </li>
-            <li class="item">
-                <a href="" class="action">Twitter</a>
-            </li>
-            <li class="item">
-                <a href="" class="action">Linkedn</a>
-            </li>
+            <a href="" class="action">Sobre</a>
+            <a href="" class="action">Portfolio</a>
+            <a href="" class="action">Download CV</a>
         </nav>
+
+        <ul class="social">
+            <li class="item">
+                <a class="link" href="https://www.facebook.com/Feelipe.PM">Facebook de Felipe Machado</a>
+            </li>
+            <li class="item">
+                <a class="link" href="http://twitter.com/FeelipePM">Twitter de Felipe Machado</a>
+            </li>
+            <li class="item">
+                <a class="link" href="http://linkedin.com/FeelipePM">Linkedin de Felipe Machado</a>
+            </li>
+        </ul>
     </footer>
 
     <script src="js/component/main-expand.js"></script>
